correction css et modification pour gh pages

--- a/src/styles/BlocDescription.scss
+++ b/src/styles/BlocDescription.scss
@@ -90,6 +90,7 @@
 @media (max-width: 375px) {
   .bloc-description {
     max-width: 335px;
+    max-width: 100%;
   }
 
   .bloc-description-title {
