--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -40,7 +40,8 @@
   }
 }
 
-@media (max-width: 375px) {
+// @media (max-width: 375px) {
+@media (max-width: 640px) {
   .card {
     width: 100%;
     max-width: 335px;
