--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -21,7 +21,8 @@ a {
   }
 }
 
-@media (max-width: 375px) {
+// @media (max-width: 375px) {
+@media (max-width: 640px) {
   nav {
     gap: 25px;
   }
