correction css responsive

--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -4,7 +4,8 @@
 
   margin: 0 auto;
   text-align: center;
-  width: 1024px;
+  max-width: 1024px;
+  width: 100%;
 
   h1 {
     font-size: 288px;
@@ -34,9 +35,9 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 640px) {
   .bloc-error {
-    max-width: 335px;
+    width: 100%;
     gap: 113px;
 
     h1 {
