--- a/src/styles/BannerHome.scss
+++ b/src/styles/BannerHome.scss
@@ -37,10 +37,10 @@
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 640px) {
   .banner-home {
     height: 111px;
-    max-width: 335px;
+    max-width: 100%;
     width: 100%;
     border-radius: 10px;
 
