--- a/src/styles/Logement.scss
+++ b/src/styles/Logement.scss
@@ -48,6 +48,7 @@
   flex-direction: row;
   gap: 76px;
   margin: 30px 0 0 0;
+  width: 100%;
 }
 
 .bloc-logement-host {
@@ -94,12 +95,9 @@
   }
 }
 
-// @media (max-width: 375px) {
 @media (max-width: 640px) {
   .bloc-logement {
-    max-width: 335px;
     max-width: 100%;
-    margin: 10px 13px;
     position: relative;
     box-sizing: border-box;
   }
