--- a/src/styles/BannerAbout.scss
+++ b/src/styles/BannerAbout.scss
@@ -17,9 +17,9 @@
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 640px) {
   .banner-about {
-    max-width: 335px;
+    max-width: 100%;
     border-radius: 10px;
     width: 100%;
     height: 111px;
