--- a/src/styles/BlocDescription.scss
+++ b/src/styles/BlocDescription.scss
@@ -1,6 +1,7 @@
 .bloc-description {
   display: flex;
   flex-direction: column;
+  max-width: 45%;
 }
 
 @keyframes slideDown {
@@ -34,7 +35,8 @@
   background-color: #f7f7f7;
   margin: 0 auto;
   text-align: left;
-  width: 582px;
+  flex-wrap: wrap;
+  width: 100%;
 
   font-size: 16px;
   padding: 20px 15px;
@@ -56,7 +58,7 @@
   background-color: #ff6060;
   border-radius: 5px;
   margin: 0 auto;
-  width: 582px;
+  width: 100%;
   min-height: 52px;
   height: auto;
 
@@ -87,15 +89,22 @@
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 640px) {
   .bloc-description {
     max-width: 335px;
     max-width: 100%;
   }
 
+  .bloc-logement-description {
+    flex-direction: column;
+    gap: 20px;
+  }
+
   .bloc-description-title {
-    width: 335px;
+    // width: 335px;
+    width: 100%;
     min-height: 32px;
+    min-width: 100%;
 
     img {
       width: 16px;
@@ -111,6 +120,7 @@
 
   .text-description {
     width: 335px;
+    width: 100%;
     font-size: 12px;
   }
 }
