--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -40,11 +40,10 @@
   }
 }
 
-// @media (max-width: 375px) {
 @media (max-width: 640px) {
   .card {
     width: 100%;
-    max-width: 335px;
+    max-width: 100%;
     height: 255px;
 
     h2 {
