--- a/src/styles/BlocEquip.scss
+++ b/src/styles/BlocEquip.scss
@@ -37,7 +37,7 @@
   background-color: #f7f7f7;
   margin: 0 auto;
   text-align: left;
-  width: 582px;
+  width: 100%;
   list-style-type: none;
   font-size: 16px;
   padding: 20px 15px;
@@ -112,7 +112,7 @@
   }
 
   .text-equip {
-    width: 335px;
+    width: 100%;
     font-size: 12px;
   }
 }
