--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,3 +1,10 @@
+*,
+html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container-cards {
   background-color: #f6f6f6;
   border-radius: 25px;
@@ -7,7 +14,7 @@
   gap: 50px;
   flex-wrap: wrap;
   padding: 50px;
-  justify-content: center;
+
   overflow-y: scroll;
   height: 700px;
 }
