--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -7,7 +7,7 @@ footer {
   background-color: #000000;
   width: 100%;
   gap: 30px;
-  margin: 50px auto;
+  margin: 50px auto 0 auto;
 
   padding: 66px 0px 30px 0px;
 
